--- a/.config/hypr/hyprland/rules.conf
+++ b/.config/hypr/hyprland/rules.conf
@@ -6,12 +6,20 @@
 #╚═╝  ╚═╝ ╚═════╝ ╚══════╝╚══════╝╚══════╝
                                          
 windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = size 630 400,class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = move 1220 50,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = size 690 410,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = move 1200 50,class:^(org.pulseaudio.pavucontrol)$
 
 windowrulev2 = float,class:^(nm-connection-editor)$
 windowrulev2 = size 630 400,class:^(nm-connection-editor)$
 windowrulev2 = move 1270 50,class:^(nm-connection-editor)$
+
+windowrulev2 = float,title:^(Editing Wired connection 1)$
+windowrulev2 = size 635 575,title:^(Editing Wired connection 1)$
+windowrulev2 = move 1265 135,title:^(Editing Wired connection 1)$
+
+windowrulev2 = float,class:^(blueman-manager)$
+windowrulev2 = size 630 400,class:^(blueman-manager)$
+windowrulev2 = move 1270 50,class:^(blueman-manager)$
 
 windowrulev2 = tile,class:^(org.kde.dolphin)$,title:^(Progress Dialog - Dolphin)$
 windowrulev2 = tile,class:^(org.kde.dolphin)$,title:^(Copying - Dolphin)$
