--- a/.config/hypr/hyprland/rules.conf
+++ b/.config/hypr/hyprland/rules.conf
@@ -7,7 +7,7 @@
                                          
 windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 690 410,class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = move 1200 50,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = move 1150 50,class:^(org.pulseaudio.pavucontrol)$
 
 windowrulev2 = float,class:^(nm-connection-editor)$
 windowrulev2 = size 630 400,class:^(nm-connection-editor)$
@@ -56,6 +56,8 @@ windowrulev2 = center, title:^(Open Folder)(.*)$
 windowrulev2 = center, title:^(Save As)(.*)$
 
 windowrulev2 = size 1000 600, class:^(org.kde.ark)$
+
+windowrule = size 80% 75%,floating:1
 
 #layerrule = blur, waybar
 layerrule = blur, logout_dialog
