--- a/.config/hypr/hyprland/binds.conf
+++ b/.config/hypr/hyprland/binds.conf
@@ -49,8 +49,9 @@ bind = $mainMod, E, exec, $EXPLORER
 bind = $mainMod, C, exec, $EDITOR
 bind = $mainMod, B, exec, $BROWSER
 
-# Wofi
-bind = ALT_R, space, exec, wofi -W 600 -H 315 --show drun --style ~/.config/wofi/style.css # --allow-images for programs icon 
+# Search
+#bind = ALT_R, space, exec, wofi -W 600 -H 315 --show drun --style ~/.config/wofi/style.css # --allow-images for programs icon
+bind = ALT_R, space, exec, vicinae vicinae://toggle
 bind = $mainMod, V, exec, cliphist list | wofi -W 450 -H 215 --dmenu --allow-images --style ~/.config/wofi/clipstyle.css | cliphist decode | wl-copy
 
 # Media
