--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -2,61 +2,43 @@
   "layer": "top",
   "position": "top",
   "margin": "0 0 0 0",
-  "modules-left": ["hyprland/workspaces","group/sysinfo"],
-  "modules-center": [], 
+  "modules-left": ["hyprland/workspaces", "memory", "cpu"],
+  "modules-center": ["hyprland/window"], 
   "modules-right": ["privacy", "wireplumber", "backlight", "hyprland/language", "tray", "clock"],
 
-    "hyprland/workspaces": {
-        "rotate": 0,
-        "all-outputs": true,
-        "active-only": false,
-        "on-click": "activate",
-        "disable-scroll": false,
-        "on-scroll-up": "hyprctl dispatch workspace -1",
-        "on-scroll-down": "hyprctl dispatch workspace +1",
-        "persistent-workspaces": {
-            "1": [],
-            "2": [],
-            "3": [],
-            "4": [],
-            "5": []
-        }
+  "hyprland/workspaces": {
+      "rotate": 0,
+      "all-outputs": true,
+      "active-only": false,
+      "on-click": "activate",
+      "disable-scroll": false,
+      "on-scroll-up": "hyprctl dispatch workspace -1",
+      "on-scroll-down": "hyprctl dispatch workspace +1",
+      "persistent-workspaces": {
+          "1": [],
+          "2": [],
+          "3": [],
+          "4": [],
+          "5": []
+      }
     },
 
-     "hyprland/window": {
+    "hyprland/window": {
         "format": "{}",
         "rotate": 0,
         "separate-outputs": true,
         "rewrite": {
-            "whoami@archlinuxx:(.*)": "$1 ",
-            "(.*) — Mozilla Firefox": "$1 󰈹",
-            "(.*)Mozilla Firefox": "Firefox 󰈹",
-            "(.*) - Visual Studio Code": "$1 󰨞",
-            "(.*)Visual Studio Code": "Code 󰨞",
-            "(.*) - Code - OSS": "$1 󰨞",
-            "(.*)Code - OSS": "Code 󰨞",
-            "(.*) — Dolphin": "$1 󰉋",
-            "(.*)Spotify": "Spotify 󰓇",
-            "(.*)Steam": "Steam 󰓓",
-            "(.*) - Discord": "$1  ",
-            "(.*)Netflix": "Netflix 󰝆 ",
-            "(.*) — Google chrome": "$1  ",
-            "(.*)Google chrome": "Google chrome  ",
-            "(.*) — Github": "$1  ",
-            "(.*)Github": "Github ",
-            "(.*)Spotify Free": "Spotify 󰓇",
-            "(.*)Spotify Premiun": "Spotify 󰓇"
+        "(.*) — Mozilla Firefox": "$1 󰈹",
+        "(.*)Mozilla Firefox": "Firefox 󰈹",
+        "(.*) - Visual Studio Code": "$1 󰨞",
+        "(.*)Visual Studio Code": "Code 󰨞",
+        "(.*) — Dolphin": "$1 󰉋",
+        "(.*)Spotify": "Spotify 󰓇",
+        "(.*)Steam": "Steam 󰓓"        
         },
-        "max-length": 50
+        "max-length": 65
     },
 
-    "group/sysinfo": {
-        "orientation": "horizontal",
-        "modules": [
-            "memory",
-            "cpu"
-        ]
-    },
     "cpu": {
         "interval": 10,
         "format": "󰍛 {usage}%",
@@ -125,7 +107,7 @@
     },
 
     "hyprland/language": {
-        "format-en": "  US",
+        "format-en": "  EN",
         "format-ru": "  RU",
         "keyboard-name": "logitech-g815-rgb-mechanical-gaming-keyboard",
         "on-click": "hyprctl switchxkblayout logitech-g815-rgb-mechanical-gaming-keyboard next"
@@ -150,7 +132,7 @@
     },
 
     "clock": {
-        "format": "{:%d.%m.%y | %I:%M %p}",
+        "format": "<span font_desc='KiwiSoda 14' weight='900'>{:%a %d | %I:%M %p}</span>",
         "interval": 60,
         "tooltip": true,
         "tooltip-format": "<tt><small>{calendar}</small></tt>",
