--- a/.config/hypr/hyprland/autoexec.conf
+++ b/.config/hypr/hyprland/autoexec.conf
@@ -10,6 +10,7 @@ exec-once = dbus-update-activation-environment --systemd --all
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
+exec-once = vicinae server
 exec-once = swww-daemon
 exec-once = waybar
 exec-once = mako
@@ -28,5 +29,4 @@ exec-once = cliphist wipe
 exec-once = hyprpm reload -n
 
 exec-once = AyuGram -startintray
-#exec-once = telegram-desktop -startintray
-exec-once = otd-daemon # you can delete this
+exec-once = otd-daemon
