--- a/.config/hypr/hyprland/rules.conf
+++ b/.config/hypr/hyprland/rules.conf
@@ -27,7 +27,6 @@ windowrulev2 = tile,class:^(org.kde.dolphin)$,title:^(Copying - Dolphin)$
 windowrulev2 = float,class:(^waypaper)$
 windowrulev2 = size 825 400,class:(^waypaper)$
 
-
 windowrulev2 = float,class:^(qt5ct)$
 windowrulev2 = float,class:^(qt6ct)$
 windowrulev2 = float,class:^(org.kde.ark)$
@@ -56,6 +55,10 @@ windowrulev2 = center, title:^(Open Folder)(.*)$
 windowrulev2 = center, title:^(Save As)(.*)$
 
 windowrulev2 = size 1000 600, class:^(org.kde.ark)$
+
+#Transparency of windows
+windowrulev2 = opacity 0.85 0.85,class:^([Oo]bsidian)$
+windowrulev2 = opacity 0.85 0.85,class:^([Cc]ode)$
 
 #layerrule = blur, waybar
 layerrule = blur, logout_dialog
