--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -54,9 +54,9 @@ decoration {
 
    blur {
         enabled = true
-        size = 8
-        passes = 5
-        new_optimizations = yes
+        size = 15
+        passes = 4
+        new_optimizations = true
         contrast = 1.2
         vibrancy = 1.5
         vibrancy_darkness = 0.5
