--- a/.config/hypr/hyprland/rules.conf
+++ b/.config/hypr/hyprland/rules.conf
@@ -57,9 +57,9 @@ windowrulev2 = center, title:^(Save As)(.*)$
 windowrulev2 = size 1000 600, class:^(org.kde.ark)$
 
 #Transparency of windows
-windowrulev2 = opacity 0.85 0.85,class:^([Oo]bsidian)$
-windowrulev2 = opacity 0.85 0.85,class:^([Cc]ode)$
-
+windowrulev2 = opacity 0.85 0.85,class:^(obsidian)$
+windowrulev2 = opacity 0.85 0.85,class:^(code)$
+windowrulev2 = opacity 0.85 0.85,class:^(kitty)$
 #layerrule = blur, waybar
 layerrule = blur, logout_dialog
 layerrule = ignorezero, logout_dialog
