--- a/.config/hypr/hyprland/env.conf
+++ b/.config/hypr/hyprland/env.conf
@@ -27,6 +27,8 @@ env = HYPRCURSOR_SIZE,24
 env = XCURSOR_THEME,Hackneyed-Dark
 env = XCURSOR_SIZE,24
 
+#env = GTK_THEME,Graphite-dark
+
 # Nvidia specific
 env = LIBVA_DRIVER_NAME,nvidia
 env = GBM_BACKEND,nvidia-drm
