--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -26,8 +26,9 @@ general {
     }
 }
 
+
 animations {
-    enabled = yes
+    enabled =yes, please :)
     bezier = linear, 0, 0, 1, 1
     bezier = md3_standard, 0.2, 0, 0, 1
     bezier = md3_decel, 0.05, 0.7, 0.1, 1
@@ -39,19 +40,21 @@ animations {
     bezier = easeInOutCirc, 0.85, 0, 0.15, 1
     bezier = easeOutCirc, 0, 0.55, 0.45, 1
     bezier = easeOutExpo, 0.16, 1, 0.3, 1
-    animation = windows, 1, 3, md3_decel, popin 60%
+
+    animation = windowsIn, 1, 1.3, md3_decel, popin
+    animation = windowsOut, 1, 1.3, md3_decel, slide
+    animation = windowsMove, 1, 1.3, md3_decel, popin
     animation = border, 1, 10, default
     animation = fade, 1, 2.5, md3_decel
-    animation = workspaces, 1, 3.5, easeOutExpo, slide
+    animation = workspaces, 1, 1.4, easeOutExpo, slidefade 15%
     animation = specialWorkspace, 1, 3, md3_decel, slidevert
 }
 
 decoration {
-    rounding = 11
+    rounding = 20
     active_opacity = 1
     fullscreen_opacity = 1
     inactive_opacity = 0.95
-
    blur {
         enabled = true
         size = 15
