--- a/.config/hypr/hyprland/autoexec.conf
+++ b/.config/hypr/hyprland/autoexec.conf
@@ -29,6 +29,5 @@ exec-once = cliphist wipe
 exec-once = hyprpm reload -n
 
 exec-once = /bin/throne
-#exec-once = AyuGram -startintray
-exec-once = telegram-desktop -startintray
-exec-once = otd-daemon # you can delete this
+exec-once = Telegram -startintray
+exec-once = otd-daemon
