--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,15 +7,14 @@ tab_powerline_style         slanted
 tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
 resize_in_steps yes
 
-font_family CaskaydiaCove Nerd Font Mono
+font_family Hack
 bold_font auto
 italic_font auto
 bold_italic_font auto
 enable_audio_bell no
-font_size 9.0
+font_size 10.0
 window_padding_width 5
 cursor_trail 1
-
 resize_in_steps yes
 
 background #0d0d0d
@@ -53,7 +52,8 @@ color15 #fffef0
 
 # remap to open new kitty tab in the same directory (default is home dir)
 # map ctrl+shift+t            new_tab_with_cwd
-
+map ctrl+equal change_font_size all +2.0
+map ctrl+minus change_font_size all -2.0
 # Uncomment the following 4 lines to minimize kitty latency (higher energy usage)
 # input_delay 0
 # repaint_delay 2
