--- a/presets/mydm.conf
+++ b/presets/mydm.conf
@@ -8,7 +8,7 @@ padding-top = 0
 padding-right = 0
 padding-bottom = 0
 padding-left = 0
-background = miku.png
+background = Earth.jpg
 use-background-color = false
 background-color = #000000
 blur = 0
@@ -51,7 +51,7 @@ paint-icon = true
 spacing = 0
 
 [LoginScreen]
-background = miku.png
+background = Earth.jpg
 use-background-color = false
 background-color = #000000
 blur = 32
